# Cupid-cli

./: .env.example  .gitignore  QUICKSTART.md  README.md  memory.db  pyproject.toml  requirements.txt  setup_cupid  verify_setup.py
.claude/: settings.json
cupid/: __init__.py  agent.py  config.py  main.py  memory.py
